--- a/index.html
+++ b/index.html
@@ -1,156 +1,200 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>اعرف قبضك</title>
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@900&display=swap" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@900&display=swap" rel="stylesheet">
 <style>
-* { box-sizing: border-box; font-family: 'Cairo', sans-serif; }
-
-body {
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
-  background: radial-gradient(circle at top, #000000, #0a1427, #000);
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow-y: auto;
-  overflow-x: hidden;
-  position: relative;
+*{box-sizing:border-box;font-family:'Cairo',sans-serif;margin:0;padding:0;}
+body{
+  min-height:100vh;
+  background:#0a1427;
+  color:#fff;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  overflow-x:hidden;
+  position:relative;
 }
 
-/* النصوص الخلفية */
+/* عنوان اعرف قبضك بمؤثرات الحركة */
+h1{
+  font-size:3.5rem;
+  font-weight:900;
+  text-align:center;
+  margin:60px 0 40px 0;
+  background: linear-gradient(90deg,#00b7ff,#38bdf8,#8b5cf6,#ec4899,#00b7ff);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  background-size:300%;
+  animation: titleAnim 6s linear infinite;
+  text-shadow:0 0 15px rgba(56,189,248,0.6);
+}
+@keyframes titleAnim {
+  0% {background-position:0% 50%; transform:scale(1);}
+  50% {background-position:100% 50%; transform:scale(1.05);}
+  100% {background-position:0% 50%; transform:scale(1);}
+}
+
+/* المربع بتأثير توهج قوي */
+.container{
+  position:relative;
+  background: rgba(255,255,255,0.06);
+  backdrop-filter: blur(15px);
+  border-radius:20px;
+  border:3px solid rgba(0,183,255,0.8);
+  padding:30px 20px;
+  width:90%;
+  max-width:500px;
+  box-shadow:0 0 30px rgba(0,183,255,0.5), inset 0 0 20px rgba(139,92,246,0.2);
+  margin-bottom:100px;
+  animation: glowBoxEpic 5s ease-in-out infinite alternate;
+}
+@keyframes glowBoxEpic{
+  0%{
+    box-shadow:0 0 20px rgba(0,183,255,0.6),
+               0 0 40px rgba(56,189,248,0.4),
+               inset 0 0 25px rgba(139,92,246,0.3);
+    border-color:#00b7ff;
+  }
+  50%{
+    box-shadow:0 0 35px rgba(139,92,246,0.8),
+               0 0 60px rgba(236,72,153,0.6),
+               inset 0 0 35px rgba(56,189,248,0.4);
+    border-color:#ec4899;
+  }
+  100%{
+    box-shadow:0 0 25px rgba(0,183,255,0.7),
+               0 0 45px rgba(56,189,248,0.5),
+               inset 0 0 25px rgba(139,92,246,0.3);
+    border-color:#38bdf8;
+  }
+}
+
+label{font-size:1.2rem;font-weight:700;text-align:center;display:block;margin-bottom:10px;color:#fff;}
+input{
+  width:100%;
+  padding:12px;
+  border-radius:10px;
+  border:2px solid #00b7ff;
+  font-size:1rem;
+  text-align:center;
+  color:#111;
+  background:#f8fafc;
+  margin-bottom:12px;
+  transition:0.3s;
+}
+input:focus{outline:none;border-color:#38bdf8;box-shadow:0 0 10px #38bdf888;}
+button{
+  width:100%;
+  padding:12px;
+  font-size:1rem;
+  font-weight:700;
+  border:none;
+  border-radius:10px;
+  color:#fff;
+  background:linear-gradient(90deg,#00b7ff,#38bdf8,#8b5cf6);
+  cursor:pointer;
+  transition:0.3s;
+  background-size:200% 100%;
+  animation:btnAnim 3s linear infinite;
+}
+button:hover{transform:scale(1.05);box-shadow:0 0 20px #38bdf888;}
+@keyframes btnAnim{0%{background-position:0% 50%;}100%{background-position:100% 50%;}}
+
+.signature-top{
+  margin-top:10px;
+  font-size:0.9rem;
+  color:#d1e9ff;
+  font-weight:600;
+  font-style:italic;
+  text-align:center;
+}
+#result{margin-top:20px;display:none;}
+table{width:100%;border-collapse:separate;border-spacing:0 6px;font-size:1rem;}
+td{padding:8px;border-radius:8px;background:rgba(255,255,255,0.08);color:#fff;vertical-align:top;}
+.salary-card.not-found{
+  text-align:center;
+  background:rgba(255,0,0,0.2);
+  padding:15px;
+  border-radius:10px;
+  font-size:1rem;
+}
+.net-box{margin-top:20px;text-align:center;}
+.net-value{
+  background:linear-gradient(90deg,#0077ff,#00b7ff,#38bdf8,#8b5cf6,#ec4899);
+  color:#fff;
+  font-size:2rem;
+  font-weight:900;
+  border-radius:15px;
+  padding:15px 0;
+  box-shadow:0 0 20px #00b7ffaa;
+  animation: netGlow 4s linear infinite alternate;
+}
+@keyframes netGlow{
+  0%{background-position:0% 50%;box-shadow:0 0 15px #00b7ffaa;}
+  50%{background-position:100% 50%;box-shadow:0 0 25px #ec4899aa;}
+  100%{background-position:0% 50%;box-shadow:0 0 15px #38bdf8aa;}
+}
+.net-label{margin-top:8px;color:#b7e3ff;font-size:1rem;font-weight:700;}
+
+/* الكلمات المتحركة تحت المربع */
+.bg-words {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: -50px;
+}
+
 .bg-word {
-  position: absolute;
-  top: 40%;
-  font-size: 9rem;
+  font-size: 3.5rem;
   font-weight: 900;
-  background: linear-gradient(120deg, #00b7ff, #38bdf8, #8b5cf6, #ec4899, #00b7ff);
+  margin: 0 30px;
+  background: linear-gradient(90deg,#00b7ff,#38bdf8,#8b5cf6,#ec4899);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  opacity: 0.1;
+  opacity: 0.25;
   user-select: none;
   pointer-events: none;
-  background-size: 300% 300%;
-  animation: gradientFlow 20s infinite linear, glowPulse 8s ease-in-out infinite;
-  text-shadow: 0 0 40px rgba(0, 183, 255, 0.25);
-  white-space: nowrap;
-  filter: blur(2px);
-  z-index: 0;
+  animation-duration: 6s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  filter: drop-shadow(0 0 10px rgba(0,183,255,0.6));
 }
 
-#wordAr { left: 100%; animation: moveLeft 30s linear infinite, gradientFlow 20s infinite linear, glowPulse 8s infinite; }
-#wordMta { right: 100%; animation: moveRight 30s linear infinite, gradientFlow 20s infinite linear, glowPulse 8s infinite; }
+#wordArB { animation-name: moveLeftGlow; }
+#wordMtaB { animation-name: moveRightGlow; }
 
-@keyframes moveLeft { 0%{transform:translateX(0);opacity:0.1;}50%{opacity:0.3;}100%{transform:translateX(-200%);opacity:0.1;} }
-@keyframes moveRight { 0%{transform:translateX(0);opacity:0.1;}50%{opacity:0.3;}100%{transform:translateX(200%);opacity:0.1;} }
-@keyframes gradientFlow { 0%{background-position:0% 50%;}100%{background-position:100% 50%;} }
-@keyframes glowPulse { 0%,100%{text-shadow:0 0 40px #00b7ff80;}50%{text-shadow:0 0 80px #8b5cf6aa;} }
-
-@media (max-width: 768px) { .bg-word { font-size: 5rem; top: 45%; } }
-
-/* العنوان يظهر ويختفي مع تأثير Glow */
-h1 {
-  font-size: 4rem;
-  font-weight: 900;
-  text-align: center;
-  z-index: 5;
-  letter-spacing: 3px;
-  color: #fff;
-  text-shadow: 0 0 20px #00b7ff,0 0 40px #38bdf8,0 0 60px #8b5cf6;
-  animation: fadeGlow 3s ease-in-out infinite;
-  margin-bottom: 30px;
-  margin-top: 80px;
+@keyframes moveLeftGlow {
+  0% { transform: translateX(0) scale(1); opacity: 0.25; }
+  50% { transform: translateX(-70px) scale(1.1); opacity: 0.5; }
+  100% { transform: translateX(0) scale(1); opacity: 0.25; }
 }
-@keyframes fadeGlow {
-  0%,100% { opacity: 0.2; text-shadow:0 0 20px #00b7ff,0 0 40px #38bdf8,0 0 60px #8b5cf6; }
-  50% { opacity: 1; text-shadow:0 0 30px #38bdf8,0 0 60px #8b5cf6,0 0 100px #ec4899; }
+@keyframes moveRightGlow {
+  0% { transform: translateX(0) scale(1); opacity: 0.25; }
+  50% { transform: translateX(70px) scale(1.1); opacity: 0.5; }
+  100% { transform: translateX(0) scale(1); opacity: 0.25; }
 }
-
-/* المربع */
-.container {
-  position: relative;
-  background: rgba(255,255,255,0.06);
-  backdrop-filter: blur(20px);
-  border-radius: 30px;
-  border: 2px solid rgba(0,183,255,0.5);
-  padding: 40px 25px;
-  width: 90%;
-  max-width: 600px;
-  z-index: 10;
-  margin-bottom: 80px;
-  animation: glowBox 6s ease-in-out infinite;
-  box-shadow:0 0 20px rgba(0,183,255,0.4),0 0 40px rgba(56,189,248,0.3),0 0 80px rgba(139,92,246,0.25);
-}
-@keyframes glowBox {
-  0%,100% { box-shadow:0 0 20px rgba(0,183,255,0.4),0 0 40px rgba(56,189,248,0.3),0 0 80px rgba(139,92,246,0.25); }
-  50% { box-shadow:0 0 35px rgba(56,189,248,0.5),0 0 70px rgba(139,92,246,0.4),0 0 110px rgba(236,72,153,0.3); }
-}
-
-label { font-size: 1.3rem; font-weight: 700; display: block; margin-bottom: 14px; color: #fff; text-align: center; }
-
-input {
-  width: 100%;
-  padding: 16px;
-  border-radius: 14px;
-  border: 2px solid #00b7ff;
-  font-size: 1.2rem;
-  text-align: center;
-  color: #111;
-  background: #f8fafc;
-  margin-bottom: 14px;
-  transition:0.3s;
-}
-input:focus { outline:none; border-color:#38bdf8; box-shadow:0 0 15px #38bdf888; }
-
-/* زر عرض القبض ملون ومتحرك */
-button {
-  width: 100%;
-  background: linear-gradient(90deg,#00b7ff,#38bdf8,#8b5cf6,#ec4899,#00b7ff);
-  color: white;
-  border: none;
-  padding: 14px;
-  font-size: 1.2rem;
-  font-weight: bold;
-  border-radius: 12px;
-  cursor: pointer;
-  transition:0.3s;
-  background-size: 300% 100%;
-  animation: rainbowBtn 5s linear infinite, glowBtn 3s ease-in-out infinite;
-}
-button:hover { transform: scale(1.04); box-shadow:0 0 25px #38bdf888; }
-@keyframes rainbowBtn { 0%{background-position:0% 50%;}100%{background-position:100% 50%;} }
-@keyframes glowBtn { 0%,100%{box-shadow:0 0 15px #00b7ff88;}50%{box-shadow:0 0 25px #ec489988;} }
-
-.signature-top { margin-top: 10px; font-size: 0.9rem; color: #d1e9ff; font-weight: 600; font-style: italic; text-align: center; }
-
-#result { margin-top: 25px; display: none; }
-table { width: 100%; border-collapse: separate; border-spacing:0 8px; font-size:1.2rem; }
-td { padding:10px 8px; border-radius:10px; background:rgba(255,255,255,0.08); color:#fff; vertical-align:top; }
-.salary-card.not-found { text-align:center; background:rgba(255,0,0,0.2); padding:20px; border-radius:12px; font-size:1.2rem; }
-
-.net-box { margin-top:30px; text-align:center; }
-.net-value { background: linear-gradient(90deg,#0077ff,#00b7ff,#38bdf8); color:#fff; font-size:2.5rem; font-weight:900; border-radius:20px; padding:20px 0; box-shadow:0 0 20px #00b7ffaa; }
-.net-label { margin-top:10px; color:#b7e3ff; font-size:1.1rem; font-weight:700; }
-
 </style>
 </head>
 <body>
-
-<div id="wordAr" class="bg-word">العربي</div>
-<div id="wordMta" class="bg-word">MTA</div>
 
 <h1>اعرف قبضك</h1>
 
 <div class="container">
   <label for="riderId">ادخل Rider ID:</label>
-  <input type="text" id="riderId" placeholder="اكتب رقم الطيار هنا" />
+  <input type="text" id="riderId" placeholder="اكتب رقم الطيار هنا">
   <button onclick="showSalary()">عرض القبض</button>
   <div class="signature-top">Best regards, Rami Naseem</div>
   <div id="result"></div>
+</div>
+
+<!-- الكلمات المتحركة تحت المربع -->
+<div class="bg-words">
+  <div id="wordArB" class="bg-word">العربي</div>
+  <div id="wordMtaB" class="bg-word">MTA</div>
 </div>
 
 <script>
@@ -159,7 +203,7 @@ const apiKey="AIzaSyCsfH6MKhHCUTyVv8XmtBISqbw5FAwjo94";
 const range="Sheet1";
 let salaries={};
 
-async function fetchData() {
+async function fetchData(){
   const url=`https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${range}?key=${apiKey}`;
   const response=await fetch(url);
   const data=await response.json();
@@ -172,24 +216,24 @@ async function fetchData() {
   });
 }
 
-function showSalary() {
+function showSalary(){
   const id=document.getElementById("riderId").value.trim();
   const resultDiv=document.getElementById("result");
   if(salaries[id]){
-    let detailsHtml='<table>';
+    let html='<table>';
     Object.entries(salaries[id]).forEach(([key,value])=>{
       if(key!=="Net Salary" && key!=="صافي القبض" && key!=="Rider ID"){
         let color=key.toLowerCase().includes("عجز")?"#ff4444":"#9ae7ff";
-        detailsHtml+=`<tr><td>${key}</td><td style='text-align:left;color:${color};font-weight:900;'>${value}${isNaN(value)?"":" جنيه"}</td></tr>`;
+        html+=`<tr><td>${key}</td><td style="text-align:left;color:${color};font-weight:900;">${value}${isNaN(value)?"":" جنيه"}</td></tr>`;
       }
     });
-    detailsHtml+="</table>";
-    const netValue=salaries[id]["Net Salary"]||salaries[id]["صافي القبض"]||"غير متاح";
-    detailsHtml+=`<div class="net-box"><div class="net-value">${netValue} جنيه</div><div class="net-label">صافي القبض الفعلي للطيار</div></div>`;
-    resultDiv.innerHTML=detailsHtml;
+    html+='</table>';
+    const net=salaries[id]["Net Salary"]||salaries[id]["صافي القبض"]||"غير متاح";
+    html+=`<div class="net-box"><div class="net-value">${net} جنيه</div><div class="net-label">صافي القبض الفعلي للطيار</div></div>`;
+    resultDiv.innerHTML=html;
     resultDiv.style.display="block";
-  } else {
-    resultDiv.innerHTML="<div class='salary-card not-found'>❌ لا يوجد بيانات لهذا Rider ID</div>";
+  }else{
+    resultDiv.innerHTML='<div class="salary-card not-found">❌ لا يوجد بيانات لهذا Rider ID</div>';
     resultDiv.style.display="block";
   }
 }
