--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>اعرف قبضك</title>
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@800&display=swap" rel="stylesheet">
 <style>
 *{box-sizing:border-box;font-family:'Cairo',sans-serif;margin:0;padding:0;}
 body{
@@ -15,169 +15,138 @@ body{
   flex-direction:column;
   align-items:center;
   overflow-x:hidden;
-  position:relative;
 }
 
-/* 🔥 العنوان */
+/* العنوان */
 h1{
-  font-size:4rem;
+  font-size:3.5rem;
   font-weight:900;
   text-align:center;
-  margin:70px 0 50px 0;
-  background: linear-gradient(90deg,#00b7ff,#38bdf8,#8b5cf6,#ec4899,#00b7ff);
+  margin:60px 0 40px 0;
+  background: linear-gradient(90deg,#00b7ff,#8b5cf6,#ec4899);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
-  background-size:300%;
-  animation: titleAnim 6s linear infinite, neonPulse 2s ease-in-out infinite alternate;
-  text-shadow:0 0 25px rgba(56,189,248,0.9);
+  animation: titleAnim 4s linear infinite;
 }
 @keyframes titleAnim {
-  0% {background-position:0% 50%;}
-  50% {background-position:100% 50%;}
-  100% {background-position:0% 50%;}
-}
-@keyframes neonPulse {
-  0% {text-shadow:0 0 15px #00b7ff, 0 0 30px #38bdf8, 0 0 45px #8b5cf6;}
-  100% {text-shadow:0 0 40px #ec4899, 0 0 80px #38bdf8, 0 0 120px #00b7ff;}
+  0% {background-position:0%;}
+  100% {background-position:100%;}
 }
 
-/* 💎 المربع الزجاجي */
+/* المربع */
 .container{
-  position:relative;
-  background: linear-gradient(145deg, rgba(255,255,255,0.08), rgba(255,255,255,0.03));
-  backdrop-filter: blur(20px);
-  border-radius:25px;
-  border:2px solid rgba(0,183,255,0.6);
-  padding:50px 30px;
-  width:95%;
-  max-width:600px;
-  box-shadow:
-    0 0 40px rgba(0,183,255,0.4),
-    inset 0 0 25px rgba(139,92,246,0.15),
-    inset 0 0 45px rgba(56,189,248,0.1);
-  margin-bottom:120px;
-  animation: glassGlow 6s ease-in-out infinite alternate;
-}
-@keyframes glassGlow {
-  0% {border-color:#00b7ff; box-shadow:0 0 25px rgba(0,183,255,0.4);}
-  50% {border-color:#ec4899; box-shadow:0 0 45px rgba(236,72,153,0.6);}
-  100% {border-color:#38bdf8; box-shadow:0 0 30px rgba(56,189,248,0.5);}
+  background: rgba(255,255,255,0.05);
+  border-radius:20px;
+  border:1px solid rgba(0,183,255,0.4);
+  padding:35px 25px;
+  width:90%;
+  max-width:500px;
+  box-shadow:0 0 15px rgba(0,183,255,0.2);
+  margin-bottom:70px;
 }
 
-/* ✨ مربع الإدخال */
-.input-box {position: relative; width: 100%;}
+/* الإدخال */
 .input-box input{
-  width:100%; padding:16px; border-radius:14px;
-  border:2px solid transparent; font-size:1.2rem; text-align:center;
-  color:#fff; background:rgba(255,255,255,0.08); outline:none; transition:0.4s ease;
+  width:100%;
+  padding:14px;
+  border-radius:12px;
+  border:none;
+  font-size:1.1rem;
+  text-align:center;
+  color:#fff;
+  background:rgba(255,255,255,0.08);
+  outline:none;
+  transition:0.3s;
 }
-.input-box input::placeholder{color:#b3e5ff; opacity:0.6;}
 .input-box input:focus{
-  border-image:linear-gradient(90deg,#00b7ff,#38bdf8,#8b5cf6,#ec4899) 1;
-  box-shadow:0 0 25px rgba(0,183,255,0.6);
+  box-shadow:0 0 15px rgba(0,183,255,0.6);
   transform:scale(1.02);
 }
 
-/* 🧿 الزر */
+/* الزر */
 button{
-  width:100%; padding:16px; font-size:1.2rem; font-weight:800;
-  border:none; border-radius:14px; color:#fff;
-  background:linear-gradient(90deg,#00b7ff,#38bdf8,#8b5cf6,#ec4899);
-  cursor:pointer; transition:0.3s; background-size:300% 100%;
-  animation:btnAnim 3s linear infinite; box-shadow:0 0 20px rgba(0,183,255,0.3);
+  width:100%;
+  margin-top:15px;
+  padding:14px;
+  font-size:1.1rem;
+  font-weight:800;
+  border:none;
+  border-radius:12px;
+  color:#fff;
+  background:linear-gradient(90deg,#00b7ff,#8b5cf6,#ec4899);
+  cursor:pointer;
+  transition:0.3s;
 }
-button:hover{transform:scale(1.07); box-shadow:0 0 35px rgba(56,189,248,0.6),0 0 60px rgba(139,92,246,0.5);}
-@keyframes btnAnim{0%{background-position:0% 50%;}100%{background-position:100% 50%;}}
+button:hover{transform:scale(1.05); box-shadow:0 0 20px rgba(56,189,248,0.5);}
 
 .signature-top{
-  margin-top:20px; font-size:1rem; color:#d1e9ff; font-weight:600; font-style:italic; text-align:center; opacity:0.9;
+  margin-top:20px;
+  font-size:0.9rem;
+  color:#b3e5ff;
+  text-align:center;
+  opacity:0.8;
 }
 
-/* 💰 النتيجة */
+/* النتيجة */
 #result{margin-top:25px;display:none;}
-table{width:100%;border-collapse:separate;border-spacing:0 8px;font-size:1.05rem;}
-td{padding:10px;border-radius:10px;background:rgba(255,255,255,0.08);color:#fff;}
-.salary-card.not-found{text-align:center;background:rgba(255,0,0,0.2);padding:15px;border-radius:12px;font-size:1rem;}
-.net-box{margin-top:25px;text-align:center;position:relative;}
+table{width:100%;border-collapse:separate;border-spacing:0 6px;font-size:1rem;}
+td{padding:8px;border-radius:8px;background:rgba(255,255,255,0.07);}
+.salary-card.not-found{text-align:center;background:rgba(255,0,0,0.2);padding:12px;border-radius:10px;font-size:1rem;}
+.net-box{margin-top:20px;text-align:center;position:relative;}
 .net-value{
-  background:linear-gradient(90deg,#0077ff,#00b7ff,#38bdf8,#8b5cf6,#ec4899);
-  color:#fff;font-size:2.2rem;font-weight:900;border-radius:18px;padding:18px 0;
-  box-shadow:0 0 25px #00b7ffaa;animation: netGlow 4s linear infinite alternate;
-  position:relative;overflow:hidden;cursor:pointer;
+  background:linear-gradient(90deg,#00b7ff,#8b5cf6,#ec4899);
+  color:#fff;
+  font-size:2rem;
+  font-weight:900;
+  border-radius:14px;
+  padding:16px 0;
+  box-shadow:0 0 20px #00b7ff66;
+  cursor:pointer;
 }
-@keyframes netGlow{
-  0%{background-position:0% 50%;box-shadow:0 0 20px #00b7ffaa;}
-  50%{background-position:100% 50%;box-shadow:0 0 30px #ec4899aa;}
-  100%{background-position:0% 50%;box-shadow:0 0 20px #38bdf8aa;}
-}
-.net-label{margin-top:10px;color:#b7e3ff;font-size:1.1rem;font-weight:700;}
 
-/* 💬 البابل الاحترافي */
+/* البابل */
 .popup {
   position:absolute;
-  top:-60px;
+  top:-50px;
   left:50%;
   transform:translateX(-50%) scale(0.7);
-  background:linear-gradient(90deg,#00b7ff,#38bdf8,#8b5cf6,#ec4899);
+  background:linear-gradient(90deg,#00b7ff,#8b5cf6,#ec4899);
   color:white;
-  padding:12px 22px;
+  padding:10px 20px;
   border-radius:50px;
   font-weight:900;
-  font-size:1.1rem;
+  font-size:1rem;
   opacity:0;
   pointer-events:none;
-  box-shadow:0 0 20px rgba(0,183,255,0.8);
-  animation: colorFlow 2s linear infinite;
+  box-shadow:0 0 15px rgba(0,183,255,0.6);
 }
-@keyframes colorFlow {
-  0% {background-position:0% 50%; text-shadow:0 0 10px #00b7ff;}
-  50% {background-position:100% 50%; text-shadow:0 0 25px #ec4899;}
-  100% {background-position:0% 50%; text-shadow:0 0 10px #38bdf8;}
-}
-.show-popup {
-  animation: popupShow 2s ease forwards;
-}
+.show-popup {animation: popupShow 2s ease forwards;}
 @keyframes popupShow {
   0% {opacity:0; transform:translateX(-50%) scale(0.7);}
-  15% {opacity:1; transform:translateX(-50%) scale(1.1);}
-  70% {opacity:1; transform:translateX(-50%) scale(1);}
+  20% {opacity:1; transform:translateX(-50%) scale(1.1);}
+  80% {opacity:1; transform:translateX(-50%) scale(1);}
   100% {opacity:0; transform:translateX(-50%) scale(0.6);}
 }
 
-/* الكلمات المتحركة */
+/* الكلمات */
 .bg-words {
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin-top: -40px;
+  display:flex;
+  justify-content:center;
+  gap:40px;
+  margin-top:-30px;
 }
 .bg-word {
-  font-size: 5rem;
-  font-weight: 900;
-  margin: 0 30px;
-  background: linear-gradient(90deg,#00b7ff,#38bdf8,#8b5cf6,#ec4899);
+  font-size:4rem;
+  font-weight:900;
+  background: linear-gradient(90deg,#00b7ff,#8b5cf6,#ec4899);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  opacity: 0.25;
-  user-select: none;
-  pointer-events: none;
-  animation-duration: 6s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  filter: drop-shadow(0 0 10px rgba(0,183,255,0.6));
+  opacity:0.25;
+  animation: float 5s ease-in-out infinite;
 }
-#wordArB { animation-name: moveLeftGlow; }
-#wordMtaB { animation-name: moveRightGlow; }
-@keyframes moveLeftGlow {
-  0% { transform: translateX(0) scale(1); opacity: 0.25; }
-  50% { transform: translateX(-70px) scale(1.1); opacity: 0.5; }
-  100% { transform: translateX(0) scale(1); opacity: 0.25; }
-}
-@keyframes moveRightGlow {
-  0% { transform: translateX(0) scale(1); opacity: 0.25; }
-  50% { transform: translateX(70px) scale(1.1); opacity: 0.5; }
-  100% { transform: translateX(0) scale(1); opacity: 0.25; }
+@keyframes float {
+  0%,100%{transform:translateY(0);}
+  50%{transform:translateY(-15px);}
 }
 </style>
 </head>
@@ -196,8 +165,8 @@ td{padding:10px;border-radius:10px;background:rgba(255,255,255,0.08);color:#fff;
 </div>
 
 <div class="bg-words">
-  <div id="wordArB" class="bg-word">العربي</div>
-  <div id="wordMtaB" class="bg-word">MTA</div>
+  <div class="bg-word">العربي</div>
+  <div class="bg-word">MTA</div>
 </div>
 
 <script>
@@ -226,7 +195,7 @@ function showSalary(){
     let html='<table>';
     Object.entries(salaries[id]).forEach(([key,value])=>{
       if(key!=="Net Salary" && key!=="صافي القبض" && key!=="Rider ID"){
-        let color=key.toLowerCase().includes("عجز")?"#ff4444":"#9ae7ff";
+        let color=key.toLowerCase().includes("عجز")?"#ff6666":"#b3e5ff";
         html+=`<tr><td>${key}</td><td style="text-align:left;color:${color};font-weight:900;">${value}${isNaN(value)?"":" جنيه"}</td></tr>`;
       }
     });
@@ -255,5 +224,6 @@ function showSalary(){
 
 fetchData();
 </script>
+
 </body>
 </html>
